syntax = "proto3";

option java_package = "com.bushpath.doodle.protobuf";
option java_outer_classname = "DoodleProtos";
option java_generate_equals_and_hash = true;

/**
 * Message Type
 */ 

enum MessageType {
    FAILURE = 0;
    GOSSIP = 1;
    PLUGIN_LIST = 2;
    PLUGIN_SHOW = 3;
}

message Failure {
    string class = 1;
    string text = 2;
}

/**
 * Gossip Messages
 */

message GossipRequest {
    int32 nodesHash = 1;
    int32 controlPluginsHash = 2;
    int32 sketchPluginsHash = 3;
    map<string, bytes> pluginBytes = 4;
}

message GossipResponse {
    repeated Node nodes = 1;
    map<string, string> controlPlugins = 2;
    map<string, string> sketchPlugins = 3;
    map<string, bytes> pluginBytes = 4;
}

message Node {
    int32 id = 1;
    string ipAddress = 2;
    int32 port = 3;
}

/**
 * Plugin Messages
 */

message PluginListRequest {
} 

message PluginListResponse {
    repeated string controlPlugins = 1;
    repeated string sketchPlugins = 2;
}

message PluginShowRequest {
    string plugin = 1;
}

message PluginShowResponse {
    repeated PluginVariable variables = 1;
}

message PluginVariable {
    string type = 1;
    string description = 2;
    bool multipleValues = 3;
    bool required = 4;
}
